--- a/internal/data/compose.yml
+++ b/internal/data/compose.yml
@@ -2,15 +2,20 @@ services:
   mysql:
     image: mysql
     ports:
-      - 3306:3306
+      - 3001:3306
     environment:
       - MYSQL_ROOT_PASSWORD=test
-  
 
   postgres:
     image: postgres
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=test    
-  
+      - POSTGRES_PASSWORD=test
+
+  mariadb:
+    image: mariadb
+    ports:
+      - 3002:3306
+    environment:
+      - MARIADB_ROOT_PASSWORD=test
