--- a/sample/compose.yml
+++ b/sample/compose.yml
@@ -5,6 +5,8 @@ services:
       - 3001:3306
     environment:
       - MYSQL_ROOT_PASSWORD=test
+    volumes:
+      - ../src/db/schema.sql:/docker-entrypoint-initdb.d/schema.sql:rw
     # command: mysql -u root -ptest && CREATE USER 'user'@'localhost' IDENTIFIED BY 'password';
 
   postgres:
