--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+bin/*
 
 # Test binary, built with `go test -c`
 *.test
@@ -25,3 +26,5 @@ tmp/
 
 # Test SQLite Db
 *.db
+
+.env
