--- a/old_stuff/Dockerfile
+++ b/old_stuff/Dockerfile
@@ -9,7 +9,7 @@ RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o db-platform
 
 
-FROM alpine:latest
+FROM registry.access.redhat.com/ubi9-minimal:latest
 
 WORKDIR /app
 
